<?xml version="1.0" encoding="utf-8"?><!--
    WallpaperExport github.com/cvzi/WallpaperExport
    Copyright © 2022 cuzi@openmail.cc

    This file is part of WallpaperExport.

    WallpaperExport is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    WallpaperExport is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with WallpaperExport.  If not, see <https://www.gnu.org/licenses/>.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/linearLayoutLeft"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/system_wallpaper" />

                <TextView
                    android:id="@+id/textViewInfoLeft"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/buttonShareLeft"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/system_wallpaper"
                        android:text="@string/share_file" />

                    <Button
                        android:id="@+id/buttonSaveLeft"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/system_wallpaper"
                        android:text="@string/save_file" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/imageViewLeft"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/system_wallpaper"
                    android:padding="2dp"
                    android:src="@android:drawable/ic_menu_gallery" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutMiddle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/builtin_wallpaper" />

                <TextView
                    android:id="@+id/textViewInfoMiddle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/buttonShareMiddle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/builtin_wallpaper"
                        android:text="@string/share_file" />

                    <Button
                        android:id="@+id/buttonSaveMiddle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/builtin_wallpaper"
                        android:text="@string/save_file" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/imageViewMiddle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/builtin_wallpaper"
                    android:padding="2dp"
                    android:src="@android:drawable/ic_menu_gallery" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutRight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lock_screen_wallpaper" />

                <TextView
                    android:id="@+id/textViewInfoRight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/buttonShareRight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/lock_screen_wallpaper"
                        android:text="@string/share_file" />

                    <Button
                        android:id="@+id/buttonSaveRight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/lock_screen_wallpaper"
                        android:text="@string/save_file" />
                </LinearLayout>


                <ImageView
                    android:id="@+id/imageViewRight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/lock_screen_wallpaper"
                    android:padding="2dp"
                    android:src="@android:drawable/ic_menu_gallery" />

            </LinearLayout>

        </LinearLayout>


        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchMissingPermission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ask_for_permission_title" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewAbout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="center"
                android:labelFor="@+id/imageButtonAbout"
                android:minHeight="48dp"
                android:text="@string/about"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <ImageButton
                android:id="@+id/imageButtonAbout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_dialog_transparent"
                android:contentDescription="@string/about"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:src="@android:drawable/ic_menu_info_details"
                tools:ignore="ImageContrastCheck" />

        </LinearLayout>


    </LinearLayout>

</ScrollView>